--- a/config/locales/en-US_fat_free_crm.yml
+++ b/config/locales/en-US_fat_free_crm.yml
@@ -651,6 +651,7 @@ en-US:
     set: %{attr} set to %{to}
     unset: %{attr} unset
     change: %{attr} changed from %{from} to %{to}
+    anonymous: anonymous
 
   # Export.
   #----------------------------------------------------------------------------
