--- a/config/locales/en-US_fat_free_crm.yml
+++ b/config/locales/en-US_fat_free_crm.yml
@@ -778,6 +778,9 @@ en-US:
   
   # Views -> Admin -> Plugins
   #----------------------------------------------------------------------------
-  author: Author
-  version: Version
-  description: Description
+  views:
+    admin:
+      plugins:
+        author: Author
+        version: Version
+        description: Description
